[package]
name = "poc-report2610084"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snarkvm = { git = "ssh://git@github.com/ghostant-1017/snarkVM.git", branch = "poc-report2610084"}

rand = "0.8"
anyhow = "1.0.86"
futures-util = "0.3.30"
reqwest = "0.11.27"
serde_json = "1.0.120"
tracing = "0.1.40"
tokio = {version = "1", features = ["full"]}


[dependencies.snarkvm-ledger-puzzle-epoch]
git = "ssh://git@github.com/ghostant-1017/snarkVM.git"
package = "snarkvm-ledger-puzzle-epoch"
features = ["synthesis"]
branch = "poc-report2610084"